--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,5 +1,5 @@
 .div-header {
-  background: linear-gradient(60deg, #000000, #000009);
+  background: linear-gradient(60deg, #222d43, #222d43);
   box-shadow: 0 4px 20px 0 rgba(0, 0, 0,.14), 0 7px 10px -5px rgba(11, 11, 12, 0.64);
   padding: 10px;
   border-radius: 3px;
