--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,7 +32,7 @@
                 </mat-form-field>
               </div>
             </div>
-            <a href="#" class="text-center">Esqueceu sua senha?</a>
+            <a href="#" class="text-center" style="color: #222d43">Esqueceu sua senha?</a>
           </div>
 
           <div class="row justify-content-center">
