--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,10 +1,10 @@
-<mat-toolbar class="d-flex justify-content-between mat-elevation-z9" style="height: 50px; background-color: #000000">
+<mat-toolbar class="d-flex justify-content-between mat-elevation-z9" style="height: 50px; background-color: #222d43">
   <div class="d-flex align-items-center">
     <button *ngIf="widthScreen < 1200" id="btn-sidenav" class="btn-icon btn-sidenav" (click)="toogleSidenav()">
       <i class="fa fa fa-bars"></i>
     </button>
     <img src="../../assets/utfpr.jpg" alt="logo_constru" style="width: 40px">
-    <a href="/" style="margin-left: 10px; color: white; text-decoration: none">Sistema de Gerenciamento do DAINF</a>
+    <a routerLinkActive="active" routerLink="/" style="margin-left: 10px; color: white; text-decoration: none">Sistema de Gerenciamento do DAINF</a>
   </div>
   <button class="btn-sidenav">
     <a (click)="logout()" class="d-flex"><mat-icon style="color: #FFFFFF">exit_to_app</mat-icon></a>
