--- a/src/app/saida/saida.form.component.html
+++ b/src/app/saida/saida.form.component.html
@@ -84,6 +84,7 @@
                      id="qtde"
                      autocomplete="off"
                      #qtdeToAdd
+                     onlyNumber
                      (keyup.control.enter)="insertItem()"
                      [(ngModel)]="saidaItem.qtde"
                      name="qtde"
