--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -23,23 +23,23 @@
         </a>
       </mat-nav-list>
 
-      <mat-divider></mat-divider>
+<!--      <mat-divider></mat-divider>-->
 
-      <a mat-list-item (click)="toggleSubMenuGerais()">
-        <mat-icon mat-list-icon>business</mat-icon>
-        Geral
-        <mat-icon *ngIf="!showSubMenuGerais">chevron_right</mat-icon>
-        <mat-icon *ngIf="showSubMenuGerais">expand_more</mat-icon>
-      </a>
+<!--      <a mat-list-item (click)="toggleSubMenuGerais()">-->
+<!--        <mat-icon mat-list-icon>business</mat-icon>-->
+<!--        Geral-->
+<!--        <mat-icon *ngIf="!showSubMenuGerais">chevron_right</mat-icon>-->
+<!--        <mat-icon *ngIf="showSubMenuGerais">expand_more</mat-icon>-->
+<!--      </a>-->
 
-      <mat-nav-list class="sidenav-submenu" *ngIf="showSubMenuGerais" style="margin-left: 25px !important;">
-        <a *ngFor="let menuItem of menuGeral" mat-list-item [id]="[menuItem.id]" [routerLink]="[menuItem.path]"
-           routerLinkActive="active" class="color-toolbar">
-          <mat-icon mat-list-icon >{{menuItem.icon}}</mat-icon>
-          {{menuItem.title}}
-          <mat-divider></mat-divider>
-        </a>
-      </mat-nav-list>
+<!--      <mat-nav-list class="sidenav-submenu" *ngIf="showSubMenuGerais" style="margin-left: 25px !important;">-->
+<!--        <a *ngFor="let menuItem of menuGeral" mat-list-item [id]="[menuItem.id]" [routerLink]="[menuItem.path]"-->
+<!--           routerLinkActive="active" class="color-toolbar">-->
+<!--          <mat-icon mat-list-icon >{{menuItem.icon}}</mat-icon>-->
+<!--          {{menuItem.title}}-->
+<!--          <mat-divider></mat-divider>-->
+<!--        </a>-->
+<!--      </mat-nav-list>-->
 
     </mat-nav-list>
   </mat-drawer>
