--- a/src/app/usuario/usuario.list.component.html
+++ b/src/app/usuario/usuario.list.component.html
@@ -24,7 +24,7 @@
             <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.nome}}</mat-cell>
           </ng-container>
 
-          <ng-container matColumnDef="usuario">
+          <ng-container matColumnDef="username">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Usuário</mat-header-cell>
             <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.username}}</mat-cell>
           </ng-container>
