--- a/src/app/emprestimo/emprestimo.list.component.html
+++ b/src/app/emprestimo/emprestimo.list.component.html
@@ -16,41 +16,50 @@
 
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Código</mat-header-cell>
-            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row.id}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openOptions(row.id)">{{row.id}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="usuarioEmprestimo">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Aluno/Professor</mat-header-cell>
-            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row?.usuarioEmprestimo?.nome}}</mat-cell>
-          </ng-container>
-
-          <ng-container matColumnDef="usuarioResponsavel">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>Usuário Responsável</mat-header-cell>
-            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row?.usuarioResponsavel?.nome}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openOptions(row.id)">{{row?.usuarioEmprestimo?.nome}}</mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="dataEmprestimo">
             <mat-header-cell *matHeaderCellDef mat-sort-header>Data do Empréstimo</mat-header-cell>
-            <mat-cell *matCellDef="let row" (click)="openBottomSheet(row.id)">{{row?.dataEmprestimo}}</mat-cell>
+            <mat-cell *matCellDef="let row" (click)="openOptions(row.id)">{{row?.dataEmprestimo}}</mat-cell>
           </ng-container>
 
-          <ng-container matColumnDef="actions">
-            <mat-header-cell *matHeaderCellDef> Opções </mat-header-cell>
-            <mat-cell *matCellDef="let row">
-              <button class="btn btn-outline-secondary rounded mr-2"
-                      type="button"
-                      pTooltip="Editar"
-                      (click)="edit(row.id)">
-                <i class="fa fa-edit"></i>
-              </button>
-              <button class="btn btn-outline-primary rounded"
-                      type="button"
-                      pTooltip="Remover"
-                      (click)="delete(row.id)">
-                <i class="fa fa-trash-o"></i>
-              </button>
+          <ng-container matColumnDef="dataDevolucao">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Prazo de Devolução</mat-header-cell>
+            <mat-cell *matCellDef="let row" (click)="openOptions(row.id)">{{row?.dataEmprestimo}}</mat-cell>
+          </ng-container>
+
+          <ng-container matColumnDef="status">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
+            <mat-cell *matCellDef="let row" (click)="openOptions(row.id)">
+              <span class="badge badge-success" style="font-size: 85%">Em andamento</span>
+<!--              <span class="badge badge-danger" style="font-size: 85%">Em atraso</span>-->
+<!--              <span class="badge badge-secondary" style="font-size: 85%">Finalizado</span>-->
             </mat-cell>
           </ng-container>
+
+<!--          <ng-container matColumnDef="actions">-->
+<!--            <mat-header-cell *matHeaderCellDef> Opções </mat-header-cell>-->
+<!--            <mat-cell *matCellDef="let row">-->
+<!--              <button class="btn btn-outline-secondary rounded mr-2"-->
+<!--                      type="button"-->
+<!--                      pTooltip="Editar"-->
+<!--                      (click)="edit(row.id)">-->
+<!--                <i class="fa fa-edit"></i>-->
+<!--              </button>-->
+<!--              <button class="btn btn-outline-primary rounded"-->
+<!--                      type="button"-->
+<!--                      pTooltip="Remover"-->
+<!--                      (click)="delete(row.id)">-->
+<!--                <i class="fa fa-trash-o"></i>-->
+<!--              </button>-->
+<!--            </mat-cell>-->
+<!--          </ng-container>-->
 
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
           <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
