--- a/src/app/geral/bottomScheetEmprestimo/bottomSheet.component.html
+++ b/src/app/geral/bottomScheetEmprestimo/bottomSheet.component.html
@@ -1,13 +1,13 @@
 <mat-nav-list>
-  <a mat-list-item (click)="click('R')">
+  <a mat-list-item (click)="click('D')">
     <i class="fa fa-2x fa-undo" mat-list-icon></i>
     <span mat-line>Devolução</span>
   </a>
 
-  <a mat-list-item (click)="click('R')">
-    <i class="fa fa-2x fa-clock-o" mat-list-icon></i>
-    <span mat-line>Novo Prazo</span>
-  </a>
+<!--  <a mat-list-item (click)="click('P')">-->
+<!--    <i class="fa fa-2x fa-clock-o" mat-list-icon></i>-->
+<!--    <span mat-line>Novo Prazo</span>-->
+<!--  </a>-->
 
   <a mat-list-item (click)="click('E')">
     <i class="fa fa-2x fa-edit" mat-list-icon></i>
