--- a/src/app/geral/salvar/salvar.component.html
+++ b/src/app/geral/salvar/salvar.component.html
@@ -1,6 +1,7 @@
 <button type="{{typeButton}}"
         color="primary"
         class="w-100px br-25px"
+        [disabled]="disabled"
         (click)="click()"
         mat-stroked-button>
   Salvar
