--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -3,13 +3,13 @@
     <mat-nav-list #navList>
       <a *ngFor="let menuItem of menuItems" mat-list-item [id]="[menuItem.id]" [routerLink]="[menuItem.path]"
          routerLinkActive="active" class="color-toolbar">
-        <mat-icon mat-list-icon >{{menuItem.icon}}</mat-icon>
+        <i class="fa fa-{{menuItem.icon}} mr-2 color-icons" mat-list-icon></i>
         {{menuItem.title}}
         <mat-divider></mat-divider>
       </a>
 
       <a mat-list-item (click)="toggleSubMenuCadastro()">
-        <mat-icon mat-list-icon>edit</mat-icon>
+        <i class="fa fa-pencil mr-2 color-icons" mat-list-icon></i>
         Cadastros
         <mat-icon *ngIf="!showSubMenuCadastro">chevron_right</mat-icon>
         <mat-icon *ngIf="showSubMenuCadastro">expand_more</mat-icon>
@@ -17,7 +17,7 @@
       <mat-nav-list class="sidenav-submenu" *ngIf="showSubMenuCadastro" style="margin-left: 25px !important;">
         <a *ngFor="let menuItem of menuCadastros" mat-list-item [id]="[menuItem.id]" [routerLink]="[menuItem.path]"
            routerLinkActive="active" class="color-toolbar">
-          <mat-icon mat-list-icon >{{menuItem.icon}}</mat-icon>
+          <i class="fa fa-{{menuItem.icon}} mr-2 color-icons" mat-list-icon></i>
           {{menuItem.title}}
           <mat-divider></mat-divider>
         </a>
